layout concluso (da fixare gap tra le card)

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     background-color: #2C3E50;
 }
 
+.my-color-lightnavy {
+    background-color: #3A546D;
+}
+
 .my-color-green {
     background-color: #1ABC9C;
 }
